...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/ic_profile_map_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressLabel"
                style="@style/AppInput.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_label_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/ic_home_category_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressPhone"
                style="@style/AppInput.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_phone_hint"
                android:imeOptions="actionNext"
                android:inputType="phone" />
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:startIconDrawable="@drawable/location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddressGovernorate"
                    style="@style/AppInput.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_governorate_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />
...
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                app:startIconDrawable="@drawable/ic_checkout_pin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddressCity"
                    style="@style/AppInput.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_city_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/map">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddressLine1"
                style="@style/AppInput.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_main_line_hint"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress|textCapSentences" />
...
